# usgs-pfdf

./: .gitlab-ci.yml  README.md  code.json  pyproject.toml
docs/: conf.py
docs/api/data/landfire/: index.rst  job.rst  products.rst  url.rst
docs/guide/: data.rst
docs/resources/: installation.rst
docs/resources/release-notes/: 3.0.1.rst  3.0.2.rst  index.rst
pfdf/: errors.py
pfdf/_utils/: __init__.py  patches.py
pfdf/_validate/core/: _array.py  _path.py
pfdf/data/_utils/: requests.py  validate.py
pfdf/data/landfire/: __init__.py  _landfire.py  _validate.py  job.py  products.py  url.py
pfdf/data/noaa/: README.md  atlas14.py
pfdf/segments/: _segments.py
tests/_utils/: test_init.py
tests/_validate/core/: test_array.py  test_url.py
tests/data/_utils/: test_requests.py
tests/data/landfire/: test_landfire.py  test_landfire_job.py  test_landfire_products.py  test_landfire_url.py  test_landfire_validate.py
tests/raster/: test_raster.py
tests/raster/_utils/: test_validate_raster.py
tutorials/: 03_Download_Data.ipynb
tutorials/check_installation/: __init__.py
